--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,25 @@
         </section>
         <section>
             <h1>Projects</h1>
+            <!-- projects -->
+        <div>
+        </div>
+        
+        <div>
+        </div>
+
+        <div>
+        </div>
+
+        <div>
+        </div>
+
         </section>
+
+        <section>
+
+        </section>
+
         <section>
             <h1>Contact Me</h1>
         </section>
